[package]
name = "waku-bindings"
version = "0.1.0-beta3"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>"
]
description = "Waku networking library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/waku-org/waku-rust-bindings"
keywords = ["waku", "peer-to-peer", "libp2p", "networking"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.13"
hex = "0.4"
multiaddr = "0.16"
once_cell = "1.15"
rand = "0.8"
secp256k1 = { version = "0.24", features = ["rand", "recovery", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sscanf = "0.3"
smart-default = "0.6"
url = "2.3"
waku-sys = { version = "0.1.0-beta3", path = "../waku-sys" }

[dev-dependencies]
serial_test = "0.10.0"
