[package]
name = "waku-sys"
version = "1.0.0"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>",
    "Richard Ramos <richard@waku.org>",
    "Ivan Folgueira Bande <ivansete@status.im>"
]
description = "Waku networking library generated bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/waku-org/waku-rust-bindings"
keywords = ["waku", "peer-to-peer", "libp2p", "networking"]
categories = ["network-programming"]

exclude = [
    "vendor/examples/*",
    "vendor/docs/*",
    "vendor/coverage/*",
    "vendor/pkg/*",
    "vendor/scripts/*",
    "vendor/tests/*",
    "vendor/ci/*",
    "vendor/cmd/*",
    "**/*.md",
    "**/*.lock",
    "**/*.nix",
    "**/Makefile",
    "**/Dockerfile",
]

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
bindgen = "0.64"
cc = "1.0.73"
