[package]
name = "waku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
libsecp256k1 = "0.7"
multiaddr = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
waku-sys = { path = "../waku-sys" }
