[package]
name = "waku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.13"
hex = "0.4"
libsecp256k1 = "0.7"
multiaddr = "0.14"
once_cell = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sscanf = "0.3"
waku-sys = { path = "../waku-sys" }
