[package]
name = "waku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.13"
hex = "0.4"
secp256k1 = { version = "0.24", features = ["rand", "recovery", "serde"] }
multiaddr = "0.14"
once_cell = "1.15"
rand = "0.8"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sscanf = "0.3"
waku-sys = { path = "../waku-sys" }
