[package]
name = "toy-chat"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
waku = { path = "../../waku-bindings" }
tui = "0.19"
crossterm = "0.25"
unicode-width = "0.1"
prost = "0.11"
once_cell = "1.15"
chrono = "0.4"